<resources>

    <string name="title_home">Home</string>
    <string name="NextNum">Next</string>
    <string name="BeforeNum">Before</string>
    <string name="count">Numbers</string>
    <string name="title_notifications">Notifications</string>


    <string name="app_name">Malk</string>
    <string name="countducks">Count Ducks</string>
    <string name="welcome">Welcome</string>
    <string name="good">Good</string>
    <string name="sum">learn Sum</string>
    <string name="countAr">Learn Arabic Numbers</string>
    <string name="subtraction">Learn Sub</string>
    <string name="next">Next</string>
    <string name="before">Before</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string-array name="numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
